Try to avoid overlapping mention tooltips
by moving every second tooltip to the bottom of the mention

--- a/evaluation-webapp/style.css
+++ b/evaluation-webapp/style.css
@@ -65,6 +65,7 @@ a {
     text-align: left;
     padding: 5px;
     border-radius: 6px;
+    border: 2px solid white;
 
     /* Position of the tooltip text */
     position: absolute;
